# NapCat_bot_core

./: .env  .gitignore  Dockerfile  LICENSE  README.md  api.py  main.py  plugin_manager.py  pyproject.toml  requirements.txt
Bot_core_Client/: bot.py  logs.py  main.py  plugin_manager.py
Bot_core_Client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Bot_core_Client/api/: BotClient.py  __init__.py  client.py
Bot_core_Client/plugins/src/: __init__.py
api/: __init__.py
bot_core/: bot.py  logs.py  main.py  plugin_manager.py
bot_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bot_core/api/: __init__.py  client.py
plugins/src/: __init__.py  hello.py
