[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bot_core"
version = "0.1.0"
description = "A NapCat bot core"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets",
    "python-dotenv",
    "colorlog",
    "watchdog"
]

[project.scripts]
bot-run = "bot_core.main:main"

[tool.setuptools.packages.find]
include = ["bot_core*"]
exclude = ["plugins*", "tests*"]
